<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MenuActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/menu_logo"
        android:src="@drawable/hits_logo"
        android:layout_alignLeft="@+id/app_subtitle"
        android:layout_alignStart="@+id/app_subtitle"
        android:layout_alignBottom="@+id/app_subtitle" />

    <TextView android:text="@string/app_subtitle" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/app_subtitle"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:layout_marginTop="84dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pickup_button"
        android:id="@+id/pickup_button"
        android:layout_below="@+id/menu_logo"
        android:layout_toLeftOf="@+id/choose_holder"
        android:layout_toStartOf="@+id/choose_holder"
        android:layout_marginTop="189dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delivery_button"
        android:id="@+id/delivery_button"
        android:layout_alignTop="@+id/pickup_button"
        android:layout_alignRight="@+id/app_subtitle"
        android:layout_alignEnd="@+id/app_subtitle"
        android:layout_marginRight="36dp"
        android:layout_marginEnd="36dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/choose"
        android:id="@+id/choose_holder"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
